mdapi/Custom/objects/Service_Item__c.object
<CustomObject>
    <fields>
        <fullName>Vendor_Invoice_No__c</fullName>
        <label>Vendor Invoice No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Notes__c</fullName>
        <label>Vendor Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Status__c</fullName>
        <label>Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Supervisor_Notes__c</fullName>
        <label>Vendor Supervisor Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>Service_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yardi_Bill_To__c</fullName>
        <label>Yardi Bill To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Closed_on__c</fullName>
        <inlineHelpText>Yardi Field</inlineHelpText>
        <label>Yardi Closed on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yardi_Created_on__c</fullName>
        <description>Yardi Field</description>
        <label>Yardi Created on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yardi_Property_Code__c</fullName>
        <formula>PortfolioProperty__r.Yardi_Property_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Property Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Resolution__c</fullName>
        <label>Yardi Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Unit__c</fullName>
        <label>Yardi Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Vendor__c</fullName>
        <label>Yardi Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_WO_HMY__c</fullName>
        <label>Yardi WO HMY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Work_Order_No__c</fullName>
        <label>Yardi Work Order No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Service Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Service_Items_My_Region</fullName>
        <columns>NAME</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Created_On_Formula__c</columns>
        <columns>SItem_Actual_Open_Duration__c</columns>
        <columns>Schedule_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Technician_Vendor_Notes__c</columns>
        <columns>Vendor__c</columns>
        <columns>Vendor_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Service_Item_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed - Canceled,Closed - Not Completed,Closed - Completed</value>
        </filters>
        <label>All Open Service Items - My Region</label>
    </listViews>
    <listViews>
        <fullName>Dispatcher_Assignment_View</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Property_City__c</columns>
        <columns>Service_Request__c</columns>
        <columns>NAME</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>Assignment__c</columns>
        <columns>Technician__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Item_Status__c</field>
            <operation>equals</operation>
            <value>Sent to Dispatch</value>
        </filters>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Dispatcher Assignment View</label>
    </listViews>
    <listViews>
        <fullName>Dispatcher_Not_Completed_View</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Property_City__c</columns>
        <columns>Service_Request__c</columns>
        <columns>NAME</columns>
        <columns>Related_Service_Item_Created__c</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>Assignment__c</columns>
        <columns>Technician__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SItem_Closed_Date_Time__c</columns>
        <columns>SItem_Actual_Closed_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Item_Status__c</field>
            <operation>equals</operation>
            <value>Closed - Not Completed</value>
        </filters>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Assignment__c</field>
            <operation>equals</operation>
            <value>Technician</value>
        </filters>
        <label>Dispatcher &apos;Not Completed&apos; View</label>
    </listViews>
    <listViews>
        <fullName>Dispatcher_Related_Service_Items</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Property_City__c</columns>
        <columns>Service_Request__c</columns>
        <columns>NAME</columns>
        <columns>Related_Service_Item__c</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>Assignment__c</columns>
        <columns>Technician__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SItem_Closed_Date_Time__c</columns>
        <columns>SItem_Actual_Closed_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Service_Item__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Dispatcher &apos;Related Service Items&apos;</label>
    </listViews>
    <listViews>
        <fullName>In_Progress_Vendor_Mgmt</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>NAME</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Service_Item_Category__c</columns>
        <columns>Assignment__c</columns>
        <columns>Vendor__c</columns>
        <columns>Priority__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Schedule_Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Service_Request_Last_Activity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Item_Status__c</field>
            <operation>equals</operation>
            <value>In Progress - Vendor Mgmt</value>
        </filters>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>In Progress - Vendor Mgmt</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Service_Items_Today_Technician</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Service_Request__c</columns>
        <columns>NAME</columns>
        <columns>Brief_Description__c</columns>
        <columns>Time_Slot__c</columns>
        <columns>Technician__c</columns>
        <columns>Technician_Vendor_Completed__c</columns>
        <columns>Technician_Vendor_Notes__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_Zip_Code__c</columns>
        <columns>Service_Item_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Service_Items__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Schedule_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Service_Item_Status__c</field>
            <operation>equals</operation>
            <value>Sent to Dispatch,Waiting Vendor Assignment,In Progress - Technician</value>
        </filters>
        <label>My Open Service Items Today (Technician)</label>
    </listViews>
    <listViews>
        <fullName>My_Service_Items_Technician</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Service_Request__c</columns>
        <columns>NAME</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>Assignment__c</columns>
        <columns>Technician_Vendor_Completed__c</columns>
        <columns>Technician_Vendor_Notes__c</columns>
        <columns>Schedule_Date__c</columns>
        <columns>Time_Slot__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Service_Items__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Service Items (Technician)</label>
    </listViews>
    <listViews>
        <fullName>My_Service_Items_Today_Technician</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Service_Request__c</columns>
        <columns>NAME</columns>
        <columns>Brief_Description__c</columns>
        <columns>Time_Slot__c</columns>
        <columns>Technician__c</columns>
        <columns>Technician_Vendor_Completed__c</columns>
        <columns>Technician_Vendor_Notes__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_Zip_Code__c</columns>
        <columns>Service_Item_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Service_Items__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Schedule_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Service Items Today (Technician)</label>
    </listViews>
    <listViews>
        <fullName>On_Call_Service_Items1</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Property_City__c</columns>
        <columns>NAME</columns>
        <columns>Service_Request__c</columns>
        <columns>After_Hours_Service_Item__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>Assignment__c</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Vendor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SItem_Actual_Closed_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>After_Hours_Service_Item__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/10/2014 12:00 AM</value>
        </filters>
        <label>On Call Service Items</label>
    </listViews>
    <listViews>
        <fullName>Open_Service_Items_Created_TODAY</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Service_Request__c</columns>
        <columns>NAME</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Service_Item_Category__c</columns>
        <columns>Assignment__c</columns>
        <columns>Technician__c</columns>
        <columns>Vendor__c</columns>
        <columns>Priority__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Service_Request_Last_Activity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Item_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed - Canceled,Closed - Not Completed,Closed - Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Open Service Items Created TODAY</label>
    </listViews>
    <listViews>
        <fullName>Temporary_Dispatcher_Assignment_View</fullName>
        <columns>Property_City__c</columns>
        <columns>Assignment__c</columns>
        <columns>NAME</columns>
        <columns>Brief_Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Priority_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Category__c</columns>
        <columns>Service_Item_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_State__c</field>
            <operation>startsWith</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Temporary Dispatcher Assignment View</label>
    </listViews>
    <listViews>
        <fullName>Vendor_Supervisor_Assignment_View</fullName>
        <columns>Yardi_Property_Code__c</columns>
        <columns>NAME</columns>
        <columns>Service_Item_Status__c</columns>
        <columns>Service_Item_Category__c</columns>
        <columns>Assignment__c</columns>
        <columns>Vendor__c</columns>
        <columns>Priority__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>SItem_Open_Duration__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Item_Status__c</field>
            <operation>equals</operation>
            <value>Waiting Vendor Assignment</value>
        </filters>
        <filters>
            <field>My_Region__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Vendor Supervisor Assignment View</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000000}</displayFormat>
        <label>Service Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Items</pluralLabel>
    <recordTypes>
        <fullName>Related_Service_Item</fullName>
        <active>true</active>
        <label>Related Service Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Service_Item</fullName>
        <active>true</active>
        <label>Standard Service Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_require_Technician</fullName>
        <active>true</active>
        <description>When Assignment values is not &quot;Technician&quot;, then the Techcnician field should not be set.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Assignment__c, &quot;Technician&quot;)) &amp;&amp; NOT(ISNULL(Technician__c) || ISBLANK(Technician__c)) &amp;&amp; NOT(OR(ISPICKVAL(Not_Completed_Reason__c, &quot;Escalate to Vendor - Scope&quot;), ISPICKVAL(Not_Completed_Reason__c, &quot;Escalate to Vendor - Skill&quot;)))</errorConditionFormula>
        <errorDisplayField>Technician__c</errorDisplayField>
        <errorMessage>Please remove this value. The assignment is not for a Technician or it is not being escalated by a Technician</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_field_Technician_Vendor_Completed_01</fullName>
        <active>true</active>
        <description>When the Checkbox ‘Technician/Vendor Completed’ is checked, make Technician / Vendor Notes required</description>
        <errorConditionFormula>Technician_Vendor_Completed__c == TRUE
&amp;&amp; 
ISBLANK( Technician_Vendor_Notes__c )</errorConditionFormula>
        <errorDisplayField>Technician_Vendor_Notes__c</errorDisplayField>
        <errorMessage>Please type your notes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_field_Technician_Vendor_Completed_02</fullName>
        <active>true</active>
        <description>When the Checkbox ‘Technician/Vendor Completed’ is checked, make Technician Time Spent (hours) required</description>
        <errorConditionFormula>Technician_Vendor_Completed__c == TRUE
&amp;&amp; 
ISBLANK( Time_Spent_on_Service_Item__c )</errorConditionFormula>
        <errorDisplayField>Time_Spent_on_Service_Item__c</errorDisplayField>
        <errorMessage>Please type the time spent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Notes_When_Item_Is_Escalated</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL( Not_Completed_Reason__c , &quot;Escalate to Vendor - Scope&quot;), ISPICKVAL( Not_Completed_Reason__c , &quot;Escalate to Vendor - Skill&quot;))
&amp;&amp; 
ISBLANK( Not_Completed_Notes__c )</errorConditionFormula>
        <errorDisplayField>Not_Completed_Notes__c</errorDisplayField>
        <errorMessage>Please type your notes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Schedule_Date</fullName>
        <active>true</active>
        <description>When Assignment = Technician, make Schedule Date required</description>
        <errorConditionFormula>ISPICKVAL(Assignment__c , &quot;Technician&quot;) 
&amp;&amp; 
ISBLANK( Schedule_Date__c )</errorConditionFormula>
        <errorDisplayField>Schedule_Date__c</errorDisplayField>
        <errorMessage>Please select a Schedule Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Technician</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Assignment__c , &quot;Technician&quot;) 
&amp;&amp; 
ISBLANK( Technician__c )</errorConditionFormula>
        <errorDisplayField>Technician__c</errorDisplayField>
        <errorMessage>Please select a Technician</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Time_Slot</fullName>
        <active>true</active>
        <description>When Assignment = Technician, make Time Slot required</description>
        <errorConditionFormula>ISPICKVAL(Assignment__c , &quot;Technician&quot;) 
&amp;&amp; 
ISPICKVAL(Time_Slot__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Time_Slot__c</errorDisplayField>
        <errorMessage>Please select a Time Slot</errorMessage>
    </validationRules>
</CustomObject>